添加通过按钮提交form时,自动在form中添加遮罩

--- a/modules/10_ironmine_irm/app/views/irm/common/login.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/common/login.html.erb
@@ -12,7 +12,7 @@
         <div class="bottom">
           <div class="login-form-box">
             <div class="content-new">
-            <%= form_tag({:action=> "login"},{:id=>"login_form"}) do %>
+            <%= form_tag({:action=> "login"},{:nomask=>true,:id=>"login_form"}) do %>
                <%= back_url_hidden_field_tag %>
                   <% if params[:notice].present? %>
                     <div class="alert alert-success" style="width: 250px;">
