--- a/modules/10_ironmine_irm/app/views/irm/search/_box.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/search/_box.html.erb
@@ -1,5 +1,5 @@
 <% if ie6? %>
-  <%=form_tag({:controller=>"irm/search",:action=>"index"},{:id=>"phSearchForm"})  do |f| %>
+  <%=form_tag({:controller=>"irm/search",:action=>"index"},{:nomask=>true,:id=>"phSearchForm"})  do |f| %>
     <%= hidden_field_tag :search_option_str, "ALL Skm::EntryHeader Chm::ChangeRequest Icm::IncidentRequest Irm::Bulletin ALL Chm::ChangeRequest Icm::IncidentRequest Skm::EntryHeader Irm::Bulletin Irm::AttachmentVersion ", {:id => "searchOptionStr"} %>
     <div id="phSearchContainer" class="headerSearchContainer">
        <%= text_field_tag "q", t(:search_all),{:id=>"phSearchInput", :class => "grayTips headerSearchBoxGhostText headerSearchInput", :type => "text", :size => 20, :maxlength=>100}%>
