--- a/modules/10_ironmine_irm/app/views/irm/search/index.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/search/index.html.erb
@@ -1,4 +1,4 @@
-<!--%= show_search_result(params[:query], params[:search_option_str]) %-->
+<%#= show_search_result(params[:query], params[:search_option_str]) %>
 <%= render 'search' %>
 
 <% content_for :sidebar do %>
