--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/plugins/search.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/plugins/search.less
@@ -124,6 +124,14 @@
     color:#333435;
     font-weight:bold;
     background-color:#cfeef8}
+
+.search-page-block pre {
+    padding: 0;
+    margin: 0;
+    background: #ffffff;
+    border: none;
+}
+
 .tabs {	margin-bottom: 2em; margin-left: 5px;}
 .tabs li {margin-bottom: 5px; padding-left: 8px; color: #7D7D84; position:relative; }
 .tabs li em {display: none;}
