--- a/modules/10_ironmine_irm/app/views/irm/wf_process_instances/select_approver.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/wf_process_instances/select_approver.html.erb
@@ -1,74 +1,83 @@
-<%= page_title("","") %>
-<%= form_for(@wf_process_instance,:url=>{:action=>"submit"},:builder => LabellingFormBuilder) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_wf_process_instance_select_next_approver)%></h2></td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="pbBody">
-    <%= back_url_hidden_field_tag%>
-    <%= hidden_params_field(:bo_id)%>
-    <%= hidden_params_field(:bo_model_name)%>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><%= t(:label_irm_process_instance_process) %></td>
-              <td class="dataCol"><%= Irm::WfApprovalProcess.find(@wf_process_instance.process_id).name  %></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><%= t(:label_irm_step_instance_step) %></td>
-              <td class="dataCol"><%= @next_step.name  %></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><%= t(:label_irm_wf_approval_ste_approver_type) %></td>
-              <td class="dataCol"><%= @next_step[:approver_mode_name]  %></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><%= t(:label_irm_wf_process_instance_next_approver) %></td>
-              <td class="dataCol"><%= blank_select_tag(:next_approver_id,available_person,@wf_process_instance.next_approver_id) %></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
+<%= common_title(:action_meaning => t(:label_irm_wf_process_instance_select_next_approver)) %>
+<%= form_for(@wf_process_instance, :url => {:action => "submit"}, :builder => LabellingFormBuilder) do |f| %>
 
-        </tbody>
-      </table>
-    </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
+
+    <% content_for :form_block_a do %>
+        <%= back_url_hidden_field_tag %>
+        <%= hidden_params_field(:bo_id) %>
+        <%= hidden_params_field(:bo_model_name) %>
+        <table class="form-table">
+          <tbody>
+          <tr>
+            <td class="label-col"><%= t(:label_irm_process_instance_process) %></td>
+            <td class="data-col"><%= Irm::WfApprovalProcess.find(@wf_process_instance.process_id).name %></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><%= t(:label_irm_step_instance_step) %></td>
+            <td class="data-col"><%= @next_step.name %></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><%= t(:label_irm_wf_approval_ste_approver_type) %></td>
+            <td class="data-col"><%= @next_step[:approver_mode_name] %></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><%= t(:label_irm_wf_process_instance_next_approver) %></td>
+            <td class="data-col"><%= blank_select_tag(:next_approver_id, available_person, @wf_process_instance.next_approver_id) %></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          </tbody>
+        </table>
+    <% end %>
+
+    <% content_for :form_buttons do %>
+        <%= link_submit t(:submit), {:class => "btn btn-primary"} %>
+        <%= link_back t(:cancel), {}, {:class => "btn cancel"} %>
+    <% end %>
+
+
+
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header">
         <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:submit)%></div>
-            <div class="button"><%= link_back t(:back)%></div>
+          <td class="page-block-title">
+            <h2 class="block-title"><%= t(:label_irm_wf_process_instance_select_next_approver) %></h2>
+          </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons %>
+
           </td>
         </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+      </table>
+      <div class="page-block-body">
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <%= form_require_info %>
+            <h3 class="sub-page-block-title"><%= t(:label_irm_wf_process_instance_select_next_approver) %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_a %>
+          </div>
+        </div>
+
+      </div>
+
+      <table class="page-block-footer">
+        <tr>
+          <td class="page-block-title">
+          </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons %>
+          </td>
+        </tr>
+      </table>
+    </div>
+
 <% end %>
