--- a/modules/10_ironmine_irm/app/views/irm/wf_step_instances/show.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/wf_step_instances/show.html.erb
@@ -1,70 +1,80 @@
-<%= page_title %>
+<%= common_title(:action_meaning => t(:label_irm_wf_step_instance_submit)) %>
+<%= form_for(@wf_step_instance, :url => {:action => "submit"}, :builder => CustomFormBuilder, :html => {:id => "stepInstance"}) do |f| %>
+    <%= hidden_params_field(:id) %>
+    <%= hidden_params_field(:reject) %>
+    <%= back_url_hidden_field_tag %>
 
-<%= form_for(@wf_step_instance,:url=>{:action=>"submit"},:builder => LabellingFormBuilder,:html=>{:id=>"stepInstance"}) do |f| %>
-    <%= hidden_params_field(:id)%>
-    <%= hidden_params_field(:reject)%>
-    <%= back_url_hidden_field_tag%>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_wf_step_instance_submit)%></h2></td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="pbBody">
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
+    <% content_for :form_block_a do %>
+        <table class="form-table">
+          <tbody>
           <% step_instance_approvable_fields(@wf_process_instance).each do |attr| %>
-            <tr>
-              <td class="labelCol"><label><%=attr[:name]%></label></td>
-              <td class="dataCol" colspan="3" width="82%"><%= Irm::BusinessObject.attribute_of(@bo_instance,attr.attribute_name)%></td>
-            </tr>
+              <tr>
+                <td class="label-col"><label><%= attr[:name] %></label></td>
+                <td class="data-3col" colspan="3" width="82%"><%= Irm::BusinessObject.attribute_of(@bo_instance, attr.attribute_name) %></td>
+              </tr>
           <% end %>
-           <tr>
-              <td class="labelCol"><label for="wf_step_instance_comment"><%=t(:label_irm_wf_step_instance_comment)%></label></td>
-              <td class="dataCol" colspan="3" width="82%">
-                <%= f.hidden_field :next_approver_id %>
-                <%=f.text_area :comment,:rows=>5,:cols=>70,:id=>"wf_step_instance_comment"%>
-              </td>
-           </tr>
-           <tr>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
+          <tr>
+            <td class="label-col">
+              <label for="wf_step_instance_comment"><%= t(:label_irm_wf_step_instance_comment) %></label></td>
+            <td class="data-3col" colspan="3" width="82%">
+              <%= f.hidden_field :next_approver_id %>
+              <%= f.text_area :comment, :rows => 5, :cols => 70, :id => "wf_step_instance_comment" %>
+            </td>
+          </tr>
+          <tr>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          </tbody>
+        </table>
+    <% end %>
+
+    <% content_for :form_buttons do %>
+        <%= link_submit t(:label_irm_wf_step_instance_approved), {:class => "btn btn-primary"} %>
+        <%= link_to t(:label_irm_wf_step_instance_reject), {:action => "submit", :reject => Irm::Constant::SYS_YES}, {:class => "submit btn"} %>
+        <%= link_back t(:cancel), {}, {:class => "btn cancel"} %>
+    <% end %>
+
+
+
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header">
         <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:label_irm_wf_step_instance_approved)%></div>
-            <div class="button"><%= link_to t(:label_irm_wf_step_instance_reject),{:action => "submit",:reject=>Irm::Constant::SYS_YES},:class=>"submit"%></div>
-            <div class="button"><%= link_to t(:cancel),back_url_default()%></div>
+          <td class="page-block-title">
+            <h2 class="block-title"></h2>
+          </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons %>
+
           </td>
         </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+      </table>
+      <div class="page-block-body">
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <%= form_require_info %>
+            <h3 class="sub-page-block-title"><%= t(:label_irm_wf_process_instance_select_next_approver) %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_a %>
+          </div>
+        </div>
+
+      </div>
+
+      <table class="page-block-footer">
+        <tr>
+          <td class="page-block-title">
+          </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons %>
+          </td>
+        </tr>
+      </table>
+    </div>
+
 <% end %>
+
