--- a/modules/10_ironmine_irm/app/views/irm/search/_search.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/search/_search.html.erb
@@ -184,7 +184,8 @@
             </span>
           </div>
           <p class="pager" id="pager" style="text-align: left;">
-            <%= init_paginate(@search? @search.total: 0, params[:page].to_i, params[:per_page].to_i, 10) %>
+            <%= new_paginate(1, @search? @search.total: 0, params[:page].to_i, params[:per_page].to_i, @current_to_pre) %>
+            <%#= init_paginate(@search? @search.total: 0, params[:page].to_i, params[:per_page].to_i, 10) %>
           </p>
         </div>
       </div>
