--- a/modules/20_incident_icm/app/views/icm/incident_requests/_new_form.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_requests/_new_form.html.erb
@@ -1,10 +1,37 @@
 <%= form_for(@incident_request,:url=>{:action=>"create"},:builder => CustomFormBuilder,:html => { :multipart => true }) do |f| %>
   <%= hidden_field_tag :return_url,@return_url %>
+  <!-- 创建关联事故单用到的参数 -->
+  <%= hidden_field_tag :source_id, params[:source_id] %>
+  <%= hidden_field_tag :relation_type, params[:relation_type] %>
 
+  <!-- 源事故单的基本类型 -->
+  <% content_for :source_incident_request do %>
+    <table class="form-table">
+      <tbody>
+      <tr>
+        <td class="label-col"><label><%= t(:label_icm_incident_request_number) %></label></td>
+        <td class="data-3col">
+          <label><%= @source_incident_request[:request_number] %></label>
+        </td>
+      </tr>
+      <tr>
+        <td class="label-col"><label><%= t(:label_icm_incident_request_title) %></label></td>
+        <td class="data-3col">
+          <label><%= @source_incident_request[:title] %></label>
+        </td>
+      </tr>
+      <tr>
+        <td class="label-col"><label><%= t(:label_icm_incident_request_target_system) %></label></td>
+        <td class="data-3col">
+          <label><%= @source_incident_request[:external_system_name] %></label>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  <% end if @source_incident_request.present? %>
 
   <!--事故单基本信息-->
   <% content_for :incident_request_base do %>
-
     <table class="form-table">
       <tbody>
            <% if allow_to_function?(:create_icdt_rqst_for_other) %>
@@ -183,10 +210,24 @@
     </tr></table>
     <%= error_for @change_request %>
     <div class="page-block-body">
+    <% if @source_incident_request.present? -%>
+      <div class="sub-page-block">
+        <div class="sub-page-block-header">
+          <h3 class="sub-page-block-title"><%= t(:label_icm_incident_request_relation_source) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :source_incident_request %>
+        </div>
+      </div>
+    <% end %>
       <div class="sub-page-block">
         <div class="sub-page-block-header">
           <span class="required-help-info"> = <%=t(:label_is_required)%></span>
-          <h3 class="sub-page-block-title"><%= t(:label_icm_incident_requset_base_info) %></h3>
+          <% if @source_incident_request.present? %>
+            <h3 class="sub-page-block-title"><%= Irm::LookupValue.get_meaning("ICM_INCIDENT_REQUEST_REL_TYPE", params[:relation_type]) %> <%= t(:label_icm_incident_requset_base_info) %></h3>
+          <% else %>
+              <h3 class="sub-page-block-title"><%= t(:label_icm_incident_requset_base_info) %></h3>
+          <% end %>
         </div>
         <div class="sub-page-block-body">
           <%= content_for :incident_request_base   %>
@@ -195,7 +236,11 @@
 
       <div class="sub-page-block">
         <div class="sub-page-block-header">
-          <h3 class="sub-page-block-title"><%= t(:label_icm_incident_requset_addition_info) %></h3>
+          <% if @source_incident_request.present? %>
+            <h3 class="sub-page-block-title"><%= Irm::LookupValue.get_meaning("ICM_INCIDENT_REQUEST_REL_TYPE", params[:relation_type]) %> <%= t(:label_icm_incident_requset_addition_info) %></h3>
+          <% else %>
+            <h3 class="sub-page-block-title"><%= t(:label_icm_incident_requset_addition_info) %></h3>
+          <% end %>
         </div>
         <div class="sub-page-block-body">
           <%= content_for :incident_request_additional   %>
