事关单关联失败添加对应的错误信息进行提示

--- a/modules/20_incident_icm/app/views/icm/incident_requests/add_relation.js.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_requests/add_relation.js.erb
@@ -1,5 +1,8 @@
 $(function(){
-    <% if @incident_request %>
+  <% if flash[:error].present? %>
+    alert("<%= flash[:error]%>");
+  <%end %>
+  <% if @incident_request %>
     $("#<%= @dom_id%>").html('<%= escape_javascript(render :partial =>"/icm/incident_requests/sidebar_relation_list", :locals => {:incident_request => @incident_request,:dom_id=>@dom_id})%>');
-    <% end %>
+  <% end %>
 });
