修正提交form的mask功能在搜索框上的显示错误

--- a/modules/10_ironmine_irm/app/views/irm/search/_box.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/search/_box.html.erb
@@ -23,7 +23,7 @@
   </script>
 <% else %>
 
-<%=form_tag({:controller=>"irm/search",:action=>"index"},{:id=>"phSearchForm"})  do |f| %>
+<%=form_tag({:controller=>"irm/search",:action=>"index"},{:nomask=>true,:id=>"phSearchForm"})  do |f| %>
   <%= hidden_field_tag :search_option_str, "ALL Skm::EntryHeader Chm::ChangeRequest Icm::IncidentRequest Irm::Bulletin ALL Chm::ChangeRequest Icm::IncidentRequest Skm::EntryHeader Irm::Bulletin Irm::AttachmentVersion ", {:id => "searchOptionStr"} %>
   <div id="phSearchContainer" class="headerSearchContainer">
     <div class="headerSearchLeftRoundedCorner">
