--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/tabs.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/tabs.less
@@ -1,16 +1,17 @@
 //tabs =============
 .tabs-container {
   display: block;
+  margin-top: 10px;
 }
 .mx-tabs{
   background:#f9f8fe;
   border-bottom:3px solid #2ba6d0;
-  height:30px;
+  height:25px;
   width:auto;}
 .mx-tabs ul, .mx-tabs li {
   list-style: none;}
 .mx-tabs ul{
-  height:30px;
+  height:25px;
   padding-left:8px;}
 .mx-tabs ul li:first-child {
   border-left:1px solid #e7e7e7;
@@ -19,7 +20,7 @@
   border-top:1px solid #e7e7e7;
   border-right:1px solid #e7e7e7;
   float:left;
-  height:29px;
+  height:24px;
   min-width:80px;}
 .mx-tabs ul li a{
   color:#636363;
@@ -28,7 +29,7 @@
   font-size:12px;
   height:14px;
   line-height:14px;
-  padding:8px 10px;
+  padding:5px 10px;
   text-align:center;}
 .mx-tabs ul li a:hover{
   color:#de4727;
@@ -39,7 +40,7 @@
   color:#fff;
   font-weight:bold;
   margin-top:-3px;
-  padding-top:11px;
+  padding-top:9px;
   position:relative;
   text-decoration:none;}
 .tabs-container> .mx-tab-content{
