修正事故单回复页面中tab标签悬浮与标题的bar上

--- a/modules/20_incident_icm/app/views/icm/incident_journals/_new_form.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_journals/_new_form.html.erb
@@ -528,6 +528,7 @@
     <style type="text/css">
         .sticky #toolbar {
             position: fixed;
+            z-index: 100;
             top: 0;
             width: auto;
             left: 21px;
