修复事故单回复成功后选中的附件列表不消失

--- a/modules/20_incident_icm/app/views/icm/incident_journals/create_journal.js.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_journals/create_journal.js.erb
@@ -8,7 +8,7 @@ $(function(){
         $("#journalsNum").html('<%= t(:label_icm_incident_journal_list) %>&nbsp;(<%= journals_size(@incident_request)+1 %>)');
         reset_rich_text();
         $("#notice").html("");
-//        $("#new_incident_request_journal_file").upload_file();
+        $("#new_incident_request_journal_file .file-item").remove();
     <% else %>
         $("#notice").html("<%= escape_javascript(flash_notice)%>");
     <% end %>
