--- a/modules/50_change_chm/app/views/chm/change_requests/_journal_form.html.erb
+++ b/modules/50_change_chm/app/views/chm/change_requests/_journal_form.html.erb
@@ -15,16 +15,15 @@
           </td>
         </tr>
         <tr>
-          <td class="data-col" colspan="4" width="100%">
+          <td class="data-3col" colspan="3" width="100%">
             <%= render :partial=>"helper/upload_file",:locals=>{:upload_file_id=>"new_change_journal_file"} %>
+          </td>
+          <td class="page-block-help" style="width: 200px; text-align: right; vertical-align: top;padding-right: 10px;">
+            <%= link_submit t(:label_submit_replay),{:class=>"btn btn-primary"}%>
           </td>
         </tr>
       </tbody>
     </table>
-  <% end %>
-
-  <% content_for :form_buttons  do %>
-    <%= link_submit t(:label_submit_replay),{:class=>"btn btn-primary",:style=>"min-width:50px;"}%>
   <% end %>
 
   <!--页面结构-->
@@ -37,13 +36,6 @@
         </div>
       </div>
     </div>
-    <table class="page-block-footer">
-      <tr>
-        <td class="page-block-title">
-          <%= content_for :form_buttons   %>
-        </td>
-        <td class="page-block-button"></td>
-      </tr>
-    </table>
+
   </div>
 <% end %>
