--- a/app/views/helper/_xheditor.html.erb
+++ b/app/views/helper/_xheditor.html.erb
@@ -13,8 +13,15 @@
     function cancelAttach(){
         $(".xheModalClose").trigger('click');
     }
+
+    function submitForm(){
+        if($("#<%= textarea_id %>").val().length > 0) {
+            $($("#<%= textarea_id %>").parents("form")[0]).submit();
+        }
+    }
+
     $(function(){
-      var show_domal = {
+      var custom_plugins = {
         ironmine:{c:'screen_shot',t: $.i18n("image_from_clipboard"),s:'ctrl+7',e:function(){
           var _this=this;
           _this.saveBookmark();
@@ -29,13 +36,14 @@
           width:width,
           height: '150px',
           forcePtag:false,
-          plugins: show_domal,
+          plugins: custom_plugins,
           tools:'Bold,Italic,Underline,Strikethrough,FontColor,BackColor,Fontface,FontSize,|,Align,List,Outdent,Indent,|,Cut,Copy,Paste,|,ironmine,Img,Hr,Table,Source',
           html5Upload:false,
           upImgUrl:'/common/create_upload_file.json',
           localUrlTest:/^https?:\/\/[^\/]*?(xheditor\.com)\//i,
           remoteImgSaveUrl:'/common/create_upload_file.html',
-          upImgExt:'jpg,jpeg,gif,png'
+          upImgExt:'jpg,jpeg,gif,png',
+          shortcuts:{'ctrl+enter':submitForm}
       });
     });
 </script>
