为富文本编辑器添加是否启用 快捷提交功能

--- a/modules/20_incident_icm/app/views/icm/incident_journals/_new_form.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_journals/_new_form.html.erb
@@ -289,7 +289,7 @@
                     <td class="data-4col" id="msgEditorParent" colspan="4">
                     <% end -%>
                       <%= sub_f.text_area :message_body, :id=>"msgEditor", :jrequired => true, :rows=>8,:cols=>20,:class=>"input-xxlarge",:style=>"width:100%" %>
-                      <%= xheditor("msgEditor", true) %>
+                      <%= xheditor("msgEditor", true,true) %>
                     </td>
                 <% end %>
               </tr>
