--- a/modules/50_change_chm/app/views/chm/change_requests/_journal_form.html.erb
+++ b/modules/50_change_chm/app/views/chm/change_requests/_journal_form.html.erb
@@ -11,7 +11,7 @@
           <td class="data-4col" colspan="4">
           <% end -%>
             <%= f.text_area :message_body ,:id=>"msgEditor", :jrequired => true,:rows=>8,:style=>"width:100%;" %>
-            <%= xheditor("msgEditor",true) %>
+            <%= xheditor("msgEditor",true,true) %>
           </td>
         </tr>
         <tr>
