--- a/app/views/helper/_xheditor.html.erb
+++ b/app/views/helper/_xheditor.html.erb
@@ -29,7 +29,7 @@
         }}
       };
       var width = '600px';
-      <%if force_fit_width%>
+      <%if force_fit_width %>
         width = $("#<%= textarea_id %>").parents("td").width() - 10+"px";
       <%end%>
       var editor = $("#<%= textarea_id %>").xheditor({
@@ -42,8 +42,11 @@
           upImgUrl:'/common/create_upload_file.json',
           localUrlTest:/^https?:\/\/[^\/]*?(xheditor\.com)\//i,
           remoteImgSaveUrl:'/common/create_upload_file.html',
-          upImgExt:'jpg,jpeg,gif,png',
-          shortcuts:{'ctrl+enter':submitForm}
+          <% if shortcuts -%>
+          shortcuts:{'ctrl+enter':submitForm},
+          <% end -%>
+          upImgExt:'jpg,jpeg,gif,png'
+
       });
     });
 </script>
