feature: HLI模块，增加计划时间的录入和显示

--- a/modules/110_hotline_hli/app/views/icm/incident_journals/_new_form.html.erb
+++ b/modules/110_hotline_hli/app/views/icm/incident_journals/_new_form.html.erb
@@ -287,6 +287,12 @@
           <td class="data-col">
             <div><%= @incident_request[:supporter_name] %></div>
           </td>
+          <% unless @incident_request[:estimated_date].blank?%>
+          <td class="label-col"><label for="incident_estimated_date"><%=t(:label_icm_incident_request_estimated_date)%></label></td>
+          <td class="data-3col">
+            <%= format_date(@incident_request[:estimated_date])%>
+          </td>
+          <% end %>
         </tr>
         <tr>
           <td class="label-col"><label ><%=t(:label_icm_incident_request_contact_number)%></label></td>
