--- a/modules/110_hotline_hli/app/views/icm/incident_requests/_new_form.html.erb
+++ b/modules/110_hotline_hli/app/views/icm/incident_requests/_new_form.html.erb
@@ -115,6 +115,12 @@
                <% end %>
              </td>
            </tr>
+           <tr>
+             <td class="label-col"><label for="incident_estimated_date"><%=t(:label_icm_incident_request_estimated_date)%></label></td>
+             <td class="data-3col">
+               <%= f.date_field(:estimated_date,:size=>12,:class=>"date",:id=>"incident_estimated_date")%>
+             </td>
+           </tr>
        </tbody>
     </table>
   <% end %>
