--- a/modules/10_ironmine_irm/app/views/irm/people/_edit_form.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/people/_edit_form.html.erb
@@ -6,15 +6,33 @@
       <tbody>
           <tr>
             <td class="label-col"><label><%=t(:label_irm_identity_login_name)%></label></td>
-            <td class="data-col"><label><%= @person.login_name%></label></td>
+            <td class="data-col">
+              <% if allow_to_function?(:edit_person_login_name) -%>
+                  <%=f.text_field :login_name %>
+              <% else -%>
+                <label><%= @person.login_name %></label>
+              <% end -%>
+            </td>
             <td class="label-col"><label><%=(t :label_irm_person_role)%></label></td>
             <td class="data-col"><%=f.blank_select :role_id,available_roles,{},{:id=>"role_id"}%></td>
           </tr>
           <tr>
             <td class="label-col"><label><%=(t :label_irm_person_email_address)%></label></td>
-            <td class="data-col"><%=f.text_field :email_address, :required=>true%></td>
+            <td class="data-col">
+              <% if allow_to_function?(:edit_person_email_and_password) -%>
+                <%=f.text_field :email_address, :required=>true%>
+              <% else -%>
+                <label><%= @person.email_address %></label>
+              <% end -%>
+            </td>
             <td class="label-col"><label><%=t(:label_irm_person_profile)%></label></td>
-            <td class="data-col"><%= f.blank_select(:profile_id,available_profile,{},{:required=>true,:id=>"profile_id"})%></td>
+            <td class="data-col">
+              <% if allow_to_function?(:edit_person_permission) -%>
+                <%= f.blank_select(:profile_id,available_profile,{},{:required=>true,:id=>"profile_id"})%>
+              <% else -%>
+                <%= f.blank_select(:profile_id,available_profile,{},{:required=>true,:id=>"profile_id",:disabled => "disabled" })%>
+              <% end -%>
+            </td>
           </tr>
           <tr>
             <td class="label-col"><label><%=(t :label_irm_person_last_name)%></label></td>
@@ -30,7 +48,7 @@
           </tr>
 
           <tr>
-            <td class="label-col"><%= t(:label_irm_identity_language_code) %></td>
+            <td class="label-col"><label><%= t(:label_irm_identity_language_code) %></label></td>
             <td class="data-col"><%= f.select(:language_code, selectable_languages) %></td>
             <td class="label-col"><label><%=t(:label_irm_person_fax_number)%></label></td>
             <td class="data-col"><%=f.text_field :fax_number, {:irm_number_and_cross => true}%></td>
@@ -56,14 +74,14 @@
           <tr>
             <td class="label-col"><label><%=t(:label_irm_person_assignment_availability_flag)%></label></td>
             <td class="data-col"><%=f.check_box :assignment_availability_flag%></td>
-            <td class="label-col empty"></td>
-            <td class="data-col empty"></td>
-          </tr>
-          <tr>
-            <td class="label-col"><%= t(:label_irm_person_template_flag) %></td>
-            <td class="data-col"><%= f.check_box(:template_flag) %></td>
-            <td class="label-col empty"></td>
-            <td class="data-col empty"></td>
+            <td class="label-col"><label><%= t(:label_irm_person_status_enabled) %></label></td>
+            <td class="data-col">
+              <% if allow_to_function?(:edit_person_email_and_password) -%>
+                <%=f.check_box :status_code, {}, "ENABLED", "OFFLINE" %>
+              <% else -%>
+                <%=check_img(@person.status_code.to_s.eql?('ENABLED')? 'Y':'N' )%>
+              <% end -%>
+            </td>
           </tr>
       </tbody>
     </table>
@@ -85,7 +103,7 @@
           </tr>
       </tbody>
     </table>
-  <% end %>
+  <% end if allow_to_function?(:edit_person_email_and_password) %>
   <% content_for :form_block_approve do%>
     <table class="form-table">
       <tbody>
@@ -144,20 +162,21 @@
           <%= content_for :form_block_person   %>
         </div>
 
-        <!-- 设置密码 -->
-        <div class="sub-page-block-header">
-          <h3 class="sub-page-block-title"><%=t(:label_irm_person_password_info)%></h3>
-        </div>
-        <div class="sub-page-block-body">
-          <%= content_for :form_block_password   %>
-        </div>
-
+        <% if allow_to_function?(:edit_person_email_and_password) -%>
+          <!-- 设置密码 -->
+          <div class="sub-page-block-header">
+            <h3 class="sub-page-block-title"><%=t(:label_irm_person_password_info)%></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_password   %>
+          </div>
+        <% end -%>
         <!-- 审批信息 -->
         <div class="sub-page-block-header">
           <h3 class="sub-page-block-title"><%=t(:label_irm_person_approve_info)%></h3>
         </div>
         <div class="sub-page-block-body">
-          <%= content_for :form_block_approve   %>
+          <%= content_for :form_block_approve %>
         </div>
 
       </div>
