--- a/modules/10_ironmine_irm/app/views/irm/wf_settings/_edit_form.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/wf_settings/_edit_form.html.erb
@@ -1,62 +1,64 @@
-<%= form_for(@wf_setting,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
+<%= form_for(@wf_setting, :url => {:action => "update"}, :builder => CustomFormBuilder) do |f| %>
+    <% content_for :form_block_common do %>
+        <table class="form-table">
+          <tbody>
+          <tr>
+            <td class="label-col">
+              <label for="wf_setting_default_workflow_person"><%= t(:label_irm_wf_setting_default_workflow_person) %></label>
+            </td>
+            <td class="data-col"><%= f.blank_select :default_workflow_person_id, available_person, :id => "wf_setting_default_workflow_person" %></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col">
+              <label for="wf_setting_email_approval_flag"><%= t(:label_irm_wf_setting_email_approval_flag) %></label>
+            </td>
+            <td class="data-col"><%= f.check_box :email_approval_flag, :id => "wf_setting_email_approval_flag" %></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          </tbody>
+        </table>
+    <% end %>
+    <% content_for :form_buttons do %>
+        <%= link_submit t(:save), {:class => "btn btn-primary"} %>
+        <%= link_to t(:cancel), {:action => "index"}, :class => "btn" %>
+    <% end %>
+
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header">
         <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_wf_setting_new)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
+          <td class="page-block-title">
+            <h2 class="block-title"><%= t(:label_irm_role_edit) %></h2>
+          </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons %>
           </td>
         </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="pbBody">
-    <%= error_for @wf_setting %>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-                      <tr>
-              <td class="labelCol"><label for="wf_setting_default_workflow_person"><%=t(:label_irm_wf_setting_default_workflow_person)%></label></td>
-              <td class="dataCol"><%=f.blank_select :default_workflow_person_id,available_person,:id=>"wf_setting_default_workflow_person"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-                      <tr>
-              <td class="labelCol"><label for="wf_setting_email_approval_flag"><%=t(:label_irm_wf_setting_email_approval_flag)%></label></td>
-              <td class="dataCol"><%=f.check_box :email_approval_flag,:id=>"wf_setting_email_approval_flag"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-                  </tbody>
+      </table>
+      <%= error_for @role %>
+      <div class="page-block-body">
+        <div class="sub-page-block">
+          <!-- 一般信息 -->
+          <div class="sub-page-block-header">
+            <%= form_require_info %>
+            <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_common %>
+          </div>
+        </div>
+      </div>
+      <table class="page-block-footer">
+        <tr>
+          <td class="page-block-title"></td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons %>
+          </td>
+        </tr>
       </table>
     </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
 <% end %>
+
