--- a/modules/20_incident_icm/app/views/icm/incident_categories/_new_form.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_categories/_new_form.html.erb
@@ -36,7 +36,9 @@
         <tr>
            <td class="label-col"></td>
            <td class="data-col" colspan="3">
-             <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:sources=>external_system_duel_values,:str_value_field=>:system_str,:str_value=>@incident_category.get_system_str} %>
+             <%= render :partial => "irm/duel_select/tmpl",
+                        :locals => {:f=>f,:sources=>accessable_external_system_duel_values,:str_value_field=>:system_str,
+                                    :str_value=>@incident_category.get_system_str, :size => 25} %>
            </td>
         </tr>
       </tbody>
