--- a/modules/20_incident_icm/app/views/icm/incident_categories/get_data.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_categories/get_data.html.erb
@@ -6,7 +6,7 @@
   <% builder.column(:code,{:title=>t(:label_icm_incident_category_code), :width => "80px"})  %>
   <% builder.column(:name,{:title=>t(:label_icm_incident_category_name),:searchable=>true, :width => "150px"})%>
   <% builder.column(:description,{:title=>t(:label_icm_incident_category_description),:width => "200px"})%>
-  <% builder.column(:external_system_name,{:title=>t(:label_icm_incident_category_external_system)}) do |data|%>
+  <% builder.column(:external_system_name,{:title=>t(:label_icm_incident_category_external_system),:searchable=>true}) do |data|%>
     <% meaning = duel_meaning(Icm::IncidentCategory.find(data[:id]).get_system_str,external_system_duel_values) %>
     <% if meaning.any? %>
         <% meaning.each do |r| %>
