--- a/modules/10_ironmine_irm/app/views/irm/bu_columns/index.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/bu_columns/index.html.erb
@@ -26,7 +26,7 @@
                       </td>
                       <td class="page-block-button">
                         <%= link_to t(:edit), {}, {:onclick => "javascript:void(0)", :href=>"#",:class=>"btn",:id=>"edit_button"}%>
-                        <%= link_to t(:label_skm_column_new_child), {}, {:onclick => "javascript:void(0)", :href=>"#",:class=>"btn",:id=>"new_child_button"}%>
+                        <%= link_to t(:label_new_child), {}, {:onclick => "javascript:void(0)", :href=>"#",:class=>"btn",:id=>"new_child_button"}%>
                       </td>
                   </tr></table>
 
