--- a/modules/50_change_chm/app/views/chm/change_requests/index.html.erb
+++ b/modules/50_change_chm/app/views/chm/change_requests/index.html.erb
@@ -25,6 +25,9 @@
     .datatable table tbody table.table-icon tr td.vt {
         width: 21px;
     }
+    .datatable table td {
+        padding: 0;
+    }
 
     .table-icon a.expand-icon {
         background: url('../images/filter_hide.gifx') no-repeat 0 0 transparent;
@@ -116,8 +119,6 @@
         min-width: 60px;
         clear: left;
     }
-
-
 
 </style>
 <script type="text/javascript">
