--- a/modules/60_config_com/app/views/com/config_items/_new_form.html.erb
+++ b/modules/60_config_com/app/views/com/config_items/_new_form.html.erb
@@ -19,19 +19,20 @@
           <tr>
             <td class="label-col"><label><%=(t :label_com_config_item_config_status)%></label></td>
             <td class="data-col"><%= f.blank_select :config_item_status_id, available_config_item_status,@config_item.config_class_id,
-                                             {}, {:require=>true,:id=>"config_item_status_id"} %></td>
+                                              {:require=>true,:id=>"config_item_status_id"} %></td>
 
             <td class="label-col"></td>
             <td class="data-col"></td>
           </tr>
+          <% if has_module?(:icm) -%>
           <tr>
             <td class="label-col"><label><%=(t :label_com_config_item_managed_group)%></label></td>
             <td class="data-col"><%= f.select :managed_group_id, nullable_options_for_select(available_support_group, @config_item.managed_group_id ),
                                              {},{:id=>"config_item_managed_group_id"} %></td>
-    
             <td class="label-col"></td>
             <td class="data-col"></td>
           </tr>
+
           <tr>
             <td class="label-col"><label><%=(t :label_com_config_item_managed_person)%></label></td>
             <td class="data-col"><%= f.select(:managed_person_id,nullable_options_for_select([],nil),{},{
@@ -44,6 +45,7 @@
             <td class="label-col"></td>
             <td class="data-col"></td>
           </tr>
+          <% end -%>
       </tbody>
     </table>
   <% end %>
