--- a/modules/10_ironmine_irm/app/views/irm/home/index.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/home/index.html.erb
@@ -1,7 +1,6 @@
 <div class="page-title">
   <div class="page-title-body">
       <%= image_tag Irm::Person.current.avatar.url(:large), :id => "crop_box", :style => "width: 45px; height: 45px;", :class => "thumbnail-visible" %>
-
     <div class="greeting">
       <div class="content">
           <span class="page-type">
@@ -36,7 +35,7 @@
 
 
 <% content_for :sidebar do%>
-    <%= render :partial =>"/icm/incident_requests/quick_create" %>
+    <%= render :partial =>"/icm/incident_requests/quick_create" if has_module?(:icm) %>
     <%= render :partial =>"/irm/common/recently_objects" %>
 <% end %>
 
