--- a/modules/110_hotline_hli/app/views/icm/incident_journals/_new_form.html.erb
+++ b/modules/110_hotline_hli/app/views/icm/incident_journals/_new_form.html.erb
@@ -621,7 +621,7 @@
         <h3 class="sub-page-block-title">(<%= @incident_request[:incident_status_name] %>)[<%= @incident_request[:request_number] %>]<%= @incident_request[:title] %></h3>
         <div style="margin-left: 15px; display:inline; float: right;">
           <span>
-            <a href="javascript:void(0)" id="showMore" class="toggle-button" ref="incidentDetail" collapsedText="<%= t(:label_icm_incident_less_info) %>" ExpandedText="<%= t(:label_icm_incident_more_info) %>">
+            <a href="javascript:void(0)" id="showMore" class="toggle-button" ref="incidentDetail" collapsedText="<%= t(:label_less_info) %>" ExpandedText="<%= t(:label_more_info) %>">
               <i class="icon-chevron-down"></i>
               <%= t(:label_icm_incident_more_info) %>
             </a>
