--- a/modules/20_incident_icm/app/views/icm/incident_journals/_new_form.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_journals/_new_form.html.erb
@@ -92,10 +92,10 @@
     <% end %>
 
     <div class="btn-group">
-      <% if @incident_request.kb_flag==Irm::Constant::SYS_NO %>
+      <% if has_module?(:skm) and @incident_request.kb_flag==Irm::Constant::SYS_NO  %>
           <%= link_to t(:label_icm_save_as_skm), {:controller=>"skm/entry_headers", :action => "new_from_icm_request", :request_id => @incident_request.id},{:class=>"btn"} %>
       <% end %>
-      <% unless @incident_request.change_request_id.present? %>
+      <% if has_module?(:chm) and !@incident_request.change_request_id.present? %>
           <%= link_to t(:label_icm_create_relate_change_request), {:controller=>"chm/change_requests", :action => "incident_new", :request_id => @incident_request.id}, {:back=>true,:class=>"btn"} %>
       <% end %>
     </div>
@@ -230,7 +230,7 @@
             </td>
           </tr></table>
           <div class="page-block-body">
-            <% if !limit_device?&&allow_to_function?(:view_skm_entries) %>
+            <% if !limit_device?&&allow_to_function?(:view_skm_entries) and has_module?(:skm) %>
                 <table class="form-table full" style="width: 100%;">
                   <tr><td class="data-4col" colspan="4">
                     <div id="linktoSKM" class="hidden form-inline">
@@ -319,7 +319,6 @@
    <iframe id='frame' name="frame" style="width:1px;height:1px;border:0px" src="about:blank"></iframe>
 <% end %>
 <% content_for :incident_request_journals do %>
-
  <div class="page-block" id="incidentReply"  style="border-bottom: none;">
    <div id="histories">
      <div style="padding: 0 0 10px 0; font-weight: bold;">
@@ -384,7 +383,7 @@
         </div>
       </div>
     </div>
-<% end %>
+<% end if has_module?(:com) %>
 
 <% content_for :change_request_tab do %>
     <% chm = Irm::ProductModule.usable?(:chm)&&@incident_request.change_request_id.present?;com = Irm::ProductModule.usable?(:com) %>
@@ -403,10 +402,10 @@
           <div class="mx-tabs" id="tabNav">
              <ul class="clear-fix">
                <li class="active" id="nav_0" ref="incidentReply"><a href="#tab1" data-toggle="tab"><%= t(:label_icm_incident_journal_list) %></a></li>
-               <% if chm %>
+               <% if chm and has_module?(:chm) %>
                  <li id="nav_1" ref="changeRequest"><a href="#tab2" data-toggle="tab"><%= t(:label_chm_change_request) %></a></li>
                <% end %>
-               <% if com %>
+               <% if com and has_module?(:com) %>
                  <li  ref="configItem"><a href="#tab3" data-toggle="tab"><%= t(:label_com_config_item) %></a></li>
                <% end %>
              </ul>
@@ -415,11 +414,11 @@
             <div class="mx-tab-pane active" id="tab1">
               <%= content_for :incident_request_journals %>
             </div>
-            <% if chm %>
+            <% if chm and has_module?(:chm) %>
             <div class="mx-tab-pane" id="tab2">
               <div class="hidden" id="changeRequest" href="<%= url_for(:controller=>"chm/change_requests", :action=>"show_detail", :id=>@incident_request.change_request_id||"001") %>"></div>
             </div>
-            <% else %>
+            <% elsif has_module?(:com) %>
             <div class="mx-tab-pane" id="tab3">
               <%= content_for :incident_config_items  %>
             </div>
@@ -479,7 +478,7 @@
         <h3 class="sub-page-block-title">(<%= @incident_request[:incident_status_name] %>)[<%= @incident_request[:request_number] %>]<%= @incident_request[:title] %></h3>
         <div style="margin-left: 15px; display:inline; float: right;">
           <span>
-            <a href="javascript:void(0)" id="showMore" class="toggle-button" ref="incidentDetail" collapsedText="<%= t(:label_icm_incident_less_info) %>" ExpandedText="<%= t(:label_icm_incident_more_info) %>">
+            <a href="javascript:void(0)" id="showMore" class="toggle-button" ref="incidentDetail" collapsedText="<%= t(:label_less_info) %>" ExpandedText="<%= t(:label_more_info) %>">
               <i class="icon-chevron-down"></i>
               <%= t(:label_icm_incident_more_info) %>
             </a>
