--- a/modules/40_survey_csi/app/views/csi/surveys/show.html.erb
+++ b/modules/40_survey_csi/app/views/csi/surveys/show.html.erb
@@ -80,7 +80,7 @@
     <%= render("show_subjects") %>
   </div>
 </div>
-
+<% if has_module?(:icm) -%>
 <div class="page-block">
   <table class="page-block-header">
     <tr>
@@ -110,7 +110,7 @@
     </table>
   </div>
 </div>
-
+<% end -%>
 <div class="page-block">
   <table class="page-block-header">
     <tr>
