--- a/modules/50_change_chm/app/views/chm/change_requests/_journal_form.html.erb
+++ b/modules/50_change_chm/app/views/chm/change_requests/_journal_form.html.erb
@@ -16,7 +16,7 @@
         </tr>
         <tr>
           <td class="data-3col" colspan="3" width="100%">
-            <%= render :partial=>"helper/upload_file",:locals=>{:upload_file_id=>"new_change_journal_file"} %>
+            <%= render :partial=>"helper/upload_file",:locals=>{:upload_file_id=>"new_change_journal_file"} if has_module?(:skm) %>
           </td>
           <td class="page-block-help" style="width: 450px; text-align: right; vertical-align: top;padding-right: 10px;">
             <span style="color:#ccc;"><%= t(:label_shortcuts_submit_form).html_safe %></span>
