--- a/modules/50_change_chm/app/views/chm/change_requests/_show_tmp.html.erb
+++ b/modules/50_change_chm/app/views/chm/change_requests/_show_tmp.html.erb
@@ -23,7 +23,7 @@
       <div class="sub-page-block-header">
         <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
         <div style="margin-left: 15px; display:inline; float: right;">
-          <a href="javascript:void(0)" id="showMore" class="toggle-button" ref="incidentDetail" collapsedText="<%= t(:label_icm_incident_less_info) %>" expandedText="<%= t(:label_icm_incident_more_info) %>">
+          <a href="javascript:void(0)" id="showMore" class="toggle-button" ref="incidentDetail" collapsedText="<%= t(:label_less_info) %>" expandedText="<%= t(:label_more_info) %>">
             <i class="icon-chevron-down"></i>
             <%= t(:label_icm_incident_more_info) %>
           </a>
@@ -87,24 +87,16 @@
     </div>
 
     <div class="sub-page-block">
-      <%- if params[:format].eql?('pdf') -%>
-        <%= render(:partial=> partial) %>
-        <%= render(:partial=> 'show_incident') %>
-        <%= render(:partial=> 'show_plan') %>
-        <%= render(:partial=> 'show_implement') %>
-        <%= render(:partial=> 'show_approve') %>
-        <%= render(:partial=> 'show_config') %>
-      <%- else -%>
       <div class="tabs-container">
-      <%= mx_tabs("nav",[{:label=>t(:label_chm_change_request_tab_common),:url=>{:controller=>"chm/change_requests",:action=>"show"},:params=>{:id=>@change_request.id}},
-                             {:label=>t(:label_chm_change_request_tab_incident),:url=>{:controller=>"chm/change_requests",:action=>"show_incident"},:params=>{:id=>@change_request.id}},
-                             {:label=>t(:label_chm_change_request_tab_plan),:url=>{:controller=>"chm/change_requests",:action=>"show_plan"},:params=>{:id=>@change_request.id}},
-                             {:label=>t(:label_chm_change_request_tab_implement),:url=>{:controller=>"chm/change_requests",:action=>"show_implement"},:params=>{:id=>@change_request.id}},
-                             {:label=>t(:label_chm_change_request_tab_approve),:url=>{:controller=>"chm/change_requests",:action=>"show_approve"},:params=>{:id=>@change_request.id}},
-                             {:label=>t(:label_com_config_item),:url=>{:controller=>"chm/change_requests",:action=>"show_config"},:params=>{:id=>@change_request.id}}])  %>
+      <% tabs = [{:label=>t(:label_chm_change_request_tab_common),:url=>{:controller=>"chm/change_requests",:action=>"show"},:params=>{:id=>@change_request.id}}]#,
+         tabs << {:label=>t(:label_chm_change_request_tab_incident),:url=>{:controller=>"chm/change_requests",:action=>"show_incident"},:params=>{:id=>@change_request.id}} if has_module?(:icm)
+         tabs << {:label=>t(:label_chm_change_request_tab_plan),:url=>{:controller=>"chm/change_requests",:action=>"show_plan"},:params=>{:id=>@change_request.id}}
+         tabs << {:label=>t(:label_chm_change_request_tab_implement),:url=>{:controller=>"chm/change_requests",:action=>"show_implement"},:params=>{:id=>@change_request.id}}
+         tabs << {:label=>t(:label_chm_change_request_tab_approve),:url=>{:controller=>"chm/change_requests",:action=>"show_approve"},:params=>{:id=>@change_request.id}}
+         tabs << {:label=>t(:label_com_config_item),:url=>{:controller=>"chm/change_requests",:action=>"show_config"},:params=>{:id=>@change_request.id}} if has_module?(:com) %>
+      <%= mx_tabs("nav",tabs)  %>
       <%= render(:partial=>partial) %>
       </div>
-      <%- end -%>
     </div>
 
   </div>
