--- a/modules/50_change_chm/app/views/chm/change_requests/edit.html.erb
+++ b/modules/50_change_chm/app/views/chm/change_requests/edit.html.erb
@@ -1,6 +1,2 @@
-<%= page("editRequest") do |p| %>
-    <%= p.page_header %>
-    <%= p.page_body do %>
-         <%= render 'edit_form'%>
-    <% end %>
-<% end %>
+<%= common_title %>
+<%= render 'edit_form'%>
