--- a/modules/50_change_chm/app/views/chm/change_tasks/new.html.erb
+++ b/modules/50_change_chm/app/views/chm/change_tasks/new.html.erb
@@ -1,6 +1,2 @@
-<%= page("newTaskPhase") do |p| %>
-    <%= p.page_header %>
-    <%= p.page_body do %>
-         <%= render 'new_form'%>
-    <% end %>
-<% end %>
+<%= common_title %>
+<%= render 'new_form'%>
