--- a/modules/60_config_com/app/views/com/config_item_statuses/get_data.html.erb
+++ b/modules/60_config_com/app/views/com/config_item_statuses/get_data.html.erb
@@ -9,7 +9,7 @@
   <% builder.column(:default_flag,{:title=>t(:default_flag), :width => "40px"}) do |data|%>
     <%= check_img(data[:default_flag]) %>
   <% end %>
-  <% builder.column(:close_flag,{:title=>t(:label_icm_incident_close_flag),:width => "80px"}) do |data|%>
+  <% builder.column(:close_flag,{:title=>t(:label_com_close_flag),:width => "80px"}) do |data|%>
     <%= check_img(data[:close_flag]) %>
   <% end %>
   <% builder.column(:status_code,{:title=>t(:status),:width=>"70px"}) do |data|%>
