--- a/modules/60_config_com/app/views/com/config_items/_edit_form.html.erb
+++ b/modules/60_config_com/app/views/com/config_items/_edit_form.html.erb
@@ -24,6 +24,7 @@
             <td class="label-col"></td>
             <td class="data-col"></td>
           </tr>
+          <% if has_module?(:icm) -%>
           <tr>
             <td class="label-col"><label><%=(t :label_com_config_item_managed_group)%></label></td>
             <td class="data-col"><%= f.select :managed_group_id, nullable_options_for_select(available_support_group, @config_item.managed_group_id ),
@@ -45,6 +46,7 @@
             <td class="label-col"></td>
             <td class="data-col"></td>
           </tr>
+          <% end -%>
       </tbody>
     </table>
   <% end %>
