修复ie6下tabs标签无法识别css选择器

--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/tabs.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/tabs.less
@@ -47,8 +47,9 @@
     overflow:auto}
 .tabs-container .mx-tab-content .mx-tab-pane{
     display:none}
-.tabs-container .mx-tab-content.active{
+.tabs-container .mx-tab-content .mx-tab-pane.active{
     display:block}
-.tabs-container:first-child .page-block,.mx-tab-pane .page-block:first-child {
+.tabs-container:first-child .page-block,
+.mx-tab-pane .page-block:first-child {
     border-top: none !important;
 }
